Fixed Width
Fixed issue where web page was too wide, beyond specified width. It was with the text below the submit buttons and its relative positioning.

--- a/WebDev101/front end/Project - Easy/googlehp.css
+++ b/WebDev101/front end/Project - Easy/googlehp.css
@@ -1,3 +1,7 @@
+body {
+  width: 100%;
+}
+
 a {
   text-decoration: none;
 }
@@ -120,8 +124,9 @@ li {
 }
 
 #temp-news {
-  position: relative;
-  top: 80px;
+  display: inline;
+  position: absolute;
+  top: 450px;
   left: 500px;
   font-family: arial;
 }
